fixing fixed header on mobile

--- a/app/styles/_header.sass
+++ b/app/styles/_header.sass
@@ -5,6 +5,8 @@
   position: fixed
   width: 100%
   z-index: 999
+  overflow: hidden
+  overflow-scrolling: touch
   +mq(min-width, $mq-smaller)
     padding: 15px 2%
   .header-wrapper
